--- a/storage/CodeGenerator-templates/ControllerTemplate.tmpl
+++ b/storage/CodeGenerator-templates/ControllerTemplate.tmpl
@@ -5,6 +5,6 @@ namespace App\Http\Controllers;
 use Illuminate\Http\Request;
 use GuzzleHttp\Psr7\Response;
 
-class [class_name] extends Controller
+class {{class_name}} extends Controller
 {
 }
